# Fast-API-Blog

./: .env-sample  README.md  auth.py  blog.db  config.py  database.py  database_test.py  email_utils.py  image_utils.py  local_database.py  main.py  models.py  pyproject.toml  schemas.py  settings.json
alembic/: env.py
alembic/versions/: 4bd57b5cb1f6_removed.py  d7f83cb21328_included_new_likes_to_the_post_model.py  e3d2b535b7fe_initial_schema.py
routers/: posts.py  users.py
static/js/: utils.js
templates/: account.html  home.html  layout.html  login.html  post.html  reset_password.html
tests/: conftest.py  test_posts.py  test_users.py
